fix: add top offset to help panel to prevent header overlap

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -202,6 +202,7 @@ header {
   border: 2px solid var(--color-border);
   border-radius: 10px;
   position: absolute;
+  top: 50px;
   background: var(--color-background-lighter);
   max-width: 80%;
   left: 10%;
